apps/home-assistant/ha-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant-label
  template:
    metadata:
      labels:
        app: homeassistant-label
    spec:
      hostNetwork: true
      # nodeSelector:
      #   kubernetes.io/hostname: homelab-03
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:2026.7.4@sha256:5a531753cea96444200158fc2b0ac7ccd739291ec50414877b396de6e0bb29b3
        imagePullPolicy: IfNotPresent
        # ports removed: hostNetwork=true conflicts with svclb hostPorts
        resources: {}
        volumeMounts:
          - mountPath: /config
            name: homeassistant-pv-config
      # - name: filebrowser
      #   image: filebrowser/filebrowser:latest
      #   ports:
      #     - containerPort: 80
      #       name: filebrowser
      #   volumeMounts:
      #     - mountPath: /srv
      #       name: homeassistant-pv-config
      #   args:
      #     - --root=/srv
      #     - --address=0.0.0.0
      #     - --port=80
      #     - --noauth
      - name: samba
        image: dperson/samba:latest
        # ports removed: hostNetwork=true conflicts with svclb hostPorts
        volumeMounts:
          - mountPath: /share
            name: homeassistant-pv-config
        command: ["/usr/bin/samba.sh"]
        args:
          - -s
          - "homeassistant;/share;yes;no;yes;all;none"
          - -p
          - -n
          # - mountPath: /etc/localtime
          #   name: homeassistant-pv-time
          #   readOnly: true
          # - name: ttyacm
          #   mountPath: /dev/ttyUSB0
      restartPolicy: Always
      volumes:
        - name: homeassistant-pv-config
          persistentVolumeClaim:
            claimName: homeassistant-pvc
        # - name: homeassistant-pv-time
        #   persistentVolumeClaim:
        #     claimName: homeassistant-pv-time
        #     readOnly: true
        # - name: ttyacm
        #   hostPath:
        #     path: /dev/ttyUSB0
status: {}
