apps/home-assistant/ha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: home-automation
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: hass.erix-homelab.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homeassistant-service
            port:
              number: 8123
  tls:
    - secretName: erix-homelab-site-tls
      hosts:
        - hass.erix-homelab.site
